[tool.poetry]
name = "polars_practice"
version = "0.1.0"
description = ""
authors = ["Asdrúbal Iván Suárez Rivera <asdrubal.ivan.suarez.rivera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.15.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
