[tool.poetry]
name = "polars_practice"
version = "0.1.0"
description = ""
authors = ["Asdrúbal Iván Suárez Rivera <asdrubal.ivan.suarez.rivera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.15.16"
streamlit = "^1.17.0"
mypy = "^0.991"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
